// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar_lib.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = "bar_lib";

=====================================output=====================================
module.exports = "bar_lib";

================================================================================
`;

exports[`foo.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var x: string = require('./bar_lib'); // 'bar_lib' does not work!
console.log(x);

=====================================output=====================================
var x: string = require("./bar_lib"); // 'bar_lib' does not work!
console.log(x);

================================================================================
`;
